opt 优化代码